--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
     <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
 <body>
+
+
+
+<!--    DEPLOYED VERSION ONLY       -->
+
+
+
 <!--[if lt IE 7]>
 <p class="chromeframe">You are using an <strong>outdated</strong> browser.
     Please <a href="http://browsehappy.com/">upgrade your browser</a> or
@@ -58,22 +65,14 @@
                 <h1>News and Updates</h1>
             </header>
             <section>
-                <h2>article section h2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-                    sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam
-                    bibendum iaculis libero, eget molestie nisl pharetra in. In semper
-                    consequat est, eu porta velit mollis nec. Curabitur posuere enim
-                    eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit
-                    suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
-            </section>
-            <section>
-                <h2>article section h2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-                    sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam
-                    bibendum iaculis libero, eget molestie nisl pharetra in. In semper
-                    consequat est, eu porta velit mollis nec. Curabitur posuere enim
-                    eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit
-                    suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
+                <h2>New Website Layout!</h2>
+                <p>Welcome to out new website! We are currently building a
+                a new website, so bear with us as this site may change frequently.
+                If there are any issues, please email us
+                <a href="mailto:tritonrocket@gmail.com?subject=Website%20Issues">here</a>.</p>
+                <p>Our site may seem discontinuous as we are in live development. Send any
+                suggestions through our email. If you are interested in working on development,
+                email us with your github account and we'll add you to the repo.
             </section>
         </article>
 
@@ -92,12 +91,12 @@
 
         <aside>
             <h4>Roomorama <small>(ad)</small></h4>
-            <small><p>Racing teams often have the opportunity to travel and compete in
+            <small>Racing teams often have the opportunity to travel and compete in
                 different locations around the world. If you find yourself across the
                 pond in the UK, look into different options for housing. Often times,
                 London vacation rentals are better for a large group, like a racing team,
                 than traditional hotel rooms.
-            </p></small>
+            </small>
         </aside>
 
         <article>
