--- a/index.html
+++ b/index.html
@@ -38,12 +38,18 @@
         <h1 class="title">Triton Rocket Club</h1>
         <nav>
             <ul>
-                <li><a href="#"><span>Contact</span></a></li>
-                <li><a href="#"><span>Sponsors</span></a></li>
+                <li><a href="contact.html"><span>Contact</span></a></li>
+                <li><a href="sponsors.html"><span>Sponsors</span></a></li>
+                <!--
+                    Not yet Developed
                 <li><a href="#"><span>Press</span></a></li>
-                <li><a href="#"><span>Recent Events</span></a></li>
-                <li><a href="#"><span>Teams</span></a></li>
-                <li><a href="#"><span>About</span></a></li>
+                -->
+                <li><a href="projects.html"><span>Recent Events</span></a></li>
+                <!--
+                    Not yet Developed
+                    <li><a href="#"><span>Teams</span></a></li>
+                -->
+                <li><a href="about.html"><span>About</span></a></li>
                 <li><a href="index.html"><span>Home</span></a></li>
             </ul>
         </nav>
