--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
 
         <aside>
             <h4>Roomorama <small>(ad)</small></h4>
-            <small><p>Racing teams often have the opportunity to travel and compete in
+            <small>Racing teams often have the opportunity to travel and compete in
                 different locations around the world. If you find yourself across the
                 pond in the UK, look into different options for housing. Often times,
-                London vacation rentals are better for a large group, like a racing team,
-                than traditional hotel rooms.
-            </p></small>
+                <a href="https://roomorama.com/short-term-rentals/united-kingdom/england/london">London vacation rentals</a>
+                are better for a large group, like a racing team, than traditional hotel rooms.
+            </small>
         </aside>
 
         <article>
