Fix Sponsor Widths for Mobile

--- a/Teams.html
+++ b/Teams.html
@@ -73,13 +73,18 @@
 <div class="footer-container">
     <footer class="wrapper">
         <h3>Sponsors</h3>
-        <!--		Gold Sponsors		-->
-        <img src="img/northropgrumman.png" width="500px" alt="Northrop Grumman">
-        <!--		Silver Sponsors	-->
-        <img src="img/aerocon.png" width="300px" alt="Aerocon Systems">
-        <img src="img/ataeng.png" width="200px" alt="ATA Engineering, Inc">
-        <!--		Bronze Sponsors	-->
-        <img src="img/westsystem.png" width="200px" alt="West System">
+   	     <div class="gold">
+   	     		<img src="img/northropgrumman.png" width="" alt="Northrop Grumman">
+   	     </div>
+   	     
+   	     <div class="silver">
+   	     		<img src="img/aerocon.png" alt="Aerocon Systems">
+   	     		<img src="img/ataeng.png" alt="ATA Engineering, Inc">
+   	     </div>
+        
+   	     <div class="bronze">
+   	     		<img src="img/westsystem.png" alt="West System">
+   	     </div>
     </footer>
 </div>
 
