--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li><a href="#"><span>Sponsors</span></a></li>
                 <li><a href="#"><span>Press</span></a></li>
                 <li><a href="#"><span>Recent Events</span></a></li>
-                <li><a href="#"><span>Teams</span></a></li>
+                <li><a href="teams.html"><span>Teams</span></a></li>
                 <li><a href="#"><span>About</span></a></li>
                 <li><a href="index.html"><span>Home</span></a></li>
             </ul>
