Team Page Finished

--- a/Teams.html
+++ b/Teams.html
@@ -47,11 +47,14 @@
 
 <div class="main-container">
 
-    <header>
-        <h1>Teams of Triton Rocket Club</h1>
+	<header class="banner" id="team-banner">
+        <h2><span>Teams at Triton Rocket Club</span></h2>
     </header>
 
-    <article>
+
+
+	<div class="wrapper clearfix main">
+
         <section class="team">
             <img src="img/Team Pictures.png" alt="Avionics Team" width="100%">
             <div class="team-text">
@@ -61,11 +64,39 @@
                 project goal of 62+ miles in altitude.</p>
             </div>
         </section>
+        
+        <section class="team">
+            <img src="img/Team Pictures/APCP.jpg" alt="APCP Motor Team" width="100%">
+            <div class="team-text">
+                <h2>APCP</h2>
+                <p>The ACPC Motor team is building a scaled version of our test 
+                Ammonium perchlorate composite propellant (APCP) rocket to 
+                acheive our 62+ mile altitude goal.</p>
+            </div>
+        </section>
 
+			<div class="clearfix"></div>
 
-
-    </article>
-
+		  <section class="team">
+            <img src="img/Team Pictures.png" alt="SLV Team" width="100%">
+            <div class="team-text">
+                <h2>SLV (Space Launch Vehical) Team</h2>
+                <p>The SLV team is tasked with building the rocket body itself: 
+                the the structure that will house the avionics package and the 
+                APCP motor.</p>
+            </div>
+        </section>
+        
+        <section class="team">
+            <img src="img/Team Pictures/Balloon.jpg" alt="Balloon Team" width="100%">
+            <div class="team-text">
+                <h2>Balloon Team</h2>
+                <p>The Balloon team is creating a lightweight, but durable, 
+                structure that will hoise the rocket and its launchpad to 
+                100,000 feet.</p>
+            </div>
+        </section>
+	</div>
 </div>
 
 
