--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <div class="main-container">
 
-    <header class="banner">
+    <header class="banner" id="home-banner">
         <h2><span>First Static Fire 2013-2014</span></h2>
     </header>
 
