Updated Issues Section of Index
Changed the issues section to show GitHub issues first, then email

--- a/index.html
+++ b/index.html
@@ -71,11 +71,18 @@
                 <h2>New Website Layout!</h2>
                 <p>Welcome to out new website! We are currently building a
                 a new website, so bear with us as this site may change frequently.
-                If there are any issues, please email us
+                If there are any issues, please post them 
+                <a href="https://github.com/40hz/Triton-Rocket/issues">here</a> on GitHub or email us
                 <a href="mailto:tritonrocket@gmail.com?subject=Website%20Issues">here</a>.</p>
                 <p>Our site may seem discontinuous as we are in live development. Send any
                 suggestions through our email. If you are interested in working on development,
                 email us with your github account and we'll add you to the repo.
+            </section>
+            
+            <section>
+            	<h2>Teams Page Posted!</h2>
+            	<p>The new teams page has been posted! Its still a little rough and is still 
+            	under development but I wanted to show everyone what I was working on.</p>
             </section>
         </article>
 
