Centered Team List

--- a/Teams.html
+++ b/Teams.html
@@ -48,17 +48,19 @@
 <div class="main-container">
 
 	<header class="banner" id="team-banner">
-        <h2><span>Teams at Triton Rocket Club</span></h2>
+        <!--<h2><span></span></h2>-->
     </header>
 
 
 
 	<div class="wrapper clearfix main">
 
+		<h1 style="text-align:center;">Integrated Product Teams (IPT)</h1>
+
         <section class="team">
             <img src="img/Team Pictures.png" alt="Avionics Team" width="100%">
             <div class="team-text">
-                <h2>Avionics</h2>
+                <h2>Avionics IPT</h2>
                 <p>The Avionics team handles the design of electronics to
                 acquire live data/video from launch all the way to our
                 project goal of 62+ miles in altitude.</p>
@@ -68,7 +70,7 @@
         <section class="team">
             <img src="img/Team Pictures/APCP.jpg" alt="APCP Motor Team" width="100%">
             <div class="team-text">
-                <h2>APCP</h2>
+                <h2>Propulsion IPT</h2>
                 <p>The ACPC Motor team is building a scaled version of our test 
                 Ammonium perchlorate composite propellant (APCP) rocket to 
                 acheive our 62+ mile altitude goal.</p>
@@ -80,7 +82,7 @@
 		  <section class="team">
             <img src="img/Team Pictures.png" alt="SLV Team" width="100%">
             <div class="team-text">
-                <h2>SLV (Space Launch Vehical) Team</h2>
+                <h2>Space Launch Vehicle (SLV) IPT</h2>
                 <p>The SLV team is tasked with building the rocket body itself: 
                 the the structure that will house the avionics package and the 
                 APCP motor.</p>
@@ -90,7 +92,7 @@
         <section class="team">
             <img src="img/Team Pictures/Balloon.jpg" alt="Balloon Team" width="100%">
             <div class="team-text">
-                <h2>Balloon Team</h2>
+                <h2>Balloon IPT</h2>
                 <p>The Balloon team is creating a lightweight, but durable, 
                 structure that will hoise the rocket and its launchpad to 
                 100,000 feet.</p>
