Fixed some issues

--- a/Teams.html
+++ b/Teams.html
@@ -61,17 +61,17 @@
             <img src="img/Team Pictures.png" alt="Avionics Team" width="100%">
             <div class="team-text">
                 <h2>Avionics IPT</h2>
-                <p>The Avionics team handles the design of electronics to
+                <p>The Avionics IPT handles the design of electronics to
                 acquire live data/video from launch all the way to our
                 project goal of 62+ miles in altitude.</p>
             </div>
         </section>
         
-        <section class="team">
+        <section class="team" id="propulsion">
             <img src="img/Team Pictures/APCP.jpg" alt="APCP Motor Team" width="100%">
             <div class="team-text">
                 <h2>Propulsion IPT</h2>
-                <p>The ACPC Motor team is building a scaled version of our test 
+                <p>The Propulsion IPT is building a scaled version of our test 
                 Ammonium perchlorate composite propellant (APCP) rocket to 
                 acheive our 62+ mile altitude goal.</p>
             </div>
@@ -83,7 +83,7 @@
             <img src="img/Team Pictures.png" alt="SLV Team" width="100%">
             <div class="team-text">
                 <h2>Space Launch Vehicle (SLV) IPT</h2>
-                <p>The SLV team is tasked with building the rocket body itself: 
+                <p>The SLV IPT is tasked with building the rocket body itself: 
                 the the structure that will house the avionics package and the 
                 APCP motor.</p>
             </div>
@@ -93,7 +93,7 @@
             <img src="img/Team Pictures/Balloon.jpg" alt="Balloon Team" width="100%">
             <div class="team-text">
                 <h2>Balloon IPT</h2>
-                <p>The Balloon team is creating a lightweight, but durable, 
+                <p>The Balloon IPT is creating a lightweight, but durable, 
                 structure that will hoise the rocket and its launchpad to 
                 100,000 feet.</p>
             </div>
