--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <div class="header-container">
     <header class="wrapper clearfix">
-        <h1 class="title">Triton Rocket Club</h1>
+        <img class="title" alt="logo" src="img/logo.png" width="200"> <!--	For flat logo src="img/logo flat.png" width="330px" -->
         <nav>
             <ul>
                 <li><a href="contact.html"><span>Contact</span></a></li>
@@ -67,6 +67,8 @@
             <header>
                 <h1>News and Updates</h1>
             </header>
+            
+          
             <section>
                 <h2>New Website Layout!</h2>
                 <p>Welcome to out new website! We are currently building a
@@ -116,7 +118,7 @@
 
             <section>
                 <h2>Executive Officers</h2>
-                <div style="color: gold;">
+                <div class="officers">
                     <h3>President: Nico Montoya</h3>
                     <h3>Vice President: Nathan Woodward</h3>
                     <h3>Secretary: Monique McClain</h3>
