--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <div class="header-container">
     <header class="wrapper clearfix">
-        <img class="title" alt="logo" src="img/logo.png" width="200"> <!--	For flat logo src="img/logo flat.png" width="330px" -->
+        <img class="title" alt="logo" src="img/logo flat.png" width="250px">
         <nav>
             <ul>
                 <li><a href="contact.html"><span>Contact</span></a></li>
@@ -68,6 +68,12 @@
                 <h1>News and Updates</h1>
             </header>
             
+            <section>
+            	<h2>New Logos!</h2>
+            	<p>We now have the official NEW logo of Triton Rocket Club! Big thanks to Trevor 
+            	Irwin who created the masterpiece!</p>
+            	<div class="logo-insert"></div>
+            </section>
           
             <section>
                 <h2>New Website Layout!</h2>
