--- a/Teams.html
+++ b/Teams.html
@@ -31,11 +31,10 @@
         <h1 class="title">Triton Rocket Club</h1>
         <nav>
             <ul>
-                <li><a href="#"><span>Contact</span></a></li>
-                <li><a href="#"><span>Sponsors</span></a></li>
-                <li><a href="#"><span>Press</span></a></li>
-                <li><a href="#"><span>Recent Events</span></a></li>
-                <li><a href="#"><span>Teams</span></a></li>
+                <li><a href="contact.html"><span>Contact</span></a></li>
+                <li><a href="sponsors"><span>Sponsors</span></a></li>
+                <!--<li><a href="#"><span>Press</span></a></li>-->"
+                <li><a href="teams.html"><span>Teams</span></a></li>
                 <li><a href="#"><span>About</span></a></li>
                 <li><a href="index.html"><span>Home</span></a></li>
             </ul>
@@ -97,6 +96,11 @@
                 structure that will hoise the rocket and its launchpad to 
                 100,000 feet.</p>
             </div>
+        </section>
+        
+        <h2>Previous Projects</h2>
+        <section class="previous">
+        		<img src=""
         </section>
 	</div>
 </div>
