Added previous projects to Teams page

--- a/Teams.html
+++ b/Teams.html
@@ -28,7 +28,7 @@
 
 <div class="header-container">
     <header class="wrapper clearfix">
-        <h1 class="title">Triton Rocket Club</h1>
+        <img class="title" alt="logo" src="img/logo flat.png" width="250px">
         <nav>
             <ul>
                 <li><a href="contact.html"><span>Contact</span></a></li>
@@ -54,7 +54,7 @@
 
 	<div class="wrapper clearfix main">
 
-		<h1 style="text-align:center;">Integrated Product Teams (IPT)</h1>
+		<h1 id="team">Integrated Product Teams (IPT)</h1>
 
         <section class="team">
             <img src="img/Team Pictures.png" alt="Avionics Team" width="100%">
@@ -98,9 +98,24 @@
             </div>
         </section>
         
-        <h2>Previous Projects</h2>
+        <div class="clearfix"></div>
+        
+        <h1 id="team">Previous Projects</h1>
         <section class="previous">
-        		<img src=""
+        		<img src="img/Old Projects/Triteia/triteia.jpg" alt="Triteia" width="100%">
+        		<div class="project-text">
+        			<h2>2012-2013: Triteia</h2>
+        			<p>Triton Rocket's second successful solid rocket build.</p>
+        		</div>
+        </section>
+        <section class="previous">
+        		<img src="img/Old Projects/Frankenstein/Frankenstein.JPG" alt="Frankenstein" width="100%">
+        		<div class="project-text">
+        			<h2>2011-2012: Frankenstein</h2>
+        			<p>Frankenstein is a solid rocket and the Triton Rocket Club’s first project. 
+        			Christened Frankenstein due to its mish-mashed appearance akin to the creature 
+        			in Mary Shelley’s Frankenstein, it was launched on February 4, 2012 in Plaster City.</p>
+        		</div>
         </section>
 	</div>
 </div>
