--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
 <body>
 
 
-
-<!--    DEPLOYED VERSION ONLY       -->
-
-
-
 <!--[if lt IE 7]>
 <p class="chromeframe">You are using an <strong>outdated</strong> browser.
     Please <a href="http://browsehappy.com/">upgrade your browser</a> or
@@ -35,7 +30,7 @@
 
 <div class="header-container">
     <header class="wrapper clearfix">
-        <img class="title" alt="logo" src="img/logo flat.png" width="250px">
+        <a href="index.html"><img class="title" alt="logo" src="img/logo flat.png" width="250px"></a>
         <nav>
             <ul>
                 <li><a href="contact.html"><span>Contact</span></a></li>
@@ -44,7 +39,6 @@
                     Not yet Developed
                 <li><a href="#"><span>Press</span></a></li>
                 -->
-                <li><a href="projects.html"><span>Recent Events</span></a></li>
                 <li><a href="teams.html"><span>Teams</span></a></li>
                 <li><a href="about.html"><span>About</span></a></li>
                 <li><a href="index.html"><span>Home</span></a></li>
